Improve CustomSumSet button count validation (#439)